test environment build

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
   --text: #0d004c;
   --card-text: #fff;
   --brand: #e2066f;
-  --brand-2: #3cd4d0;
+  --brand-2: #384d4d;
   --danger: #ff6b6b;
 }
 
